refactor: replace remaining .collect(Collectors.toList()) with .toList() in AggregatorTest
Motivation:
Follow-up to complete Stream.toList() migration.

Modification:
Replace .collect(Collectors.toList()) with .toList() in AggregatorTest.
Remove unused Collectors import.

Result:
Complete migration of JDK Stream collect patterns.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization